<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/marks_editor_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/marks_editor_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp"
        app:titleTextAppearance="@style/BaseTheme.ToolbarTitle"
        app:titleTextColor="?attr/colorAccent"
        tools:targetApi="lollipop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_editor_subject" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/marks_editor_subject_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marks_editor_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/marks_editor_hint_subject"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        tools:targetApi="O" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_editor_value" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_box">

                    <TextView
                        android:id="@+id/marks_editor_value_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:minWidth="36dp"
                        android:text="@string/marks_editor_hint_value"
                        android:textAlignment="viewEnd"
                        tools:text="9/10" />

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/marks_editor_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@id/marks_editor_value_preview"
                        android:max="40"
                        tools:progress="40" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_editor_date" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/marks_editor_date_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marks_editor_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/editor_hint_date"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        tools:ignore="TextFields"
                        tools:targetApi="O" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minHeight="64dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_editor_notes" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marks_editor_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/marks_editor_hint_notes"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        tools:targetApi="O" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/marks_editor_save"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="32dp"
        android:text="@string/action_save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="32dp"
        app:icon="@drawable/ic_done"
        app:iconPadding="8dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
